changing menu by click added

--- a/ToDo.html
+++ b/ToDo.html
@@ -49,50 +49,50 @@
           </div>
           <ol id="task-list">
             <div>
-            <li class="side-menu-option-container" onclick="changeMenu(this)">
-              <span class="material-symbols-rounded"> wb_sunny </span>
-              <div class="menu-detail">
-                <p>My Day</p>
-              </div>
-            </li>
-            <li class="side-menu-option-container" onclick="changeMenu(this)">
-              <span class="material-symbols-rounded"> star </span>
-              <div class="menu-detail">
-                <p>Important</p>
-              </div>
-            </li>
-            <li class="side-menu-option-container">
-              <span class="material-symbols-rounded"> calendar_month </span>
-              <div class="menu-detail">
-                <p>Planned</p>
-              </div>
-            </li>
-            <li class="side-menu-option-container">
-              <span class="material-symbols-rounded"> person </span>
-              <div class="menu-detail">
-                <p>Assigned to me</p>
-              </div>
-            </li>
-            <li class="side-menu-option-container">
-              <span class="material-symbols-rounded"> home </span>
-              <div class="menu-detail">
-                <p>Tasks</p>
-              </div>
-            </li>
+              <li class="side-menu-option-container" onclick="task(this)">
+                <span class="material-symbols-rounded"> wb_sunny </span>
+                <div class="menu-detail">
+                  <p>My Day</p>
+                </div>
+              </li>
+              <li class="side-menu-option-container" onclick="task(this)">
+                <span class="material-symbols-rounded"> star </span>
+                <div class="menu-detail">
+                  <p>Important</p>
+                </div>
+              </li>
+              <li class="side-menu-option-container" onclick="task(this)">
+                <span class="material-symbols-rounded"> calendar_month </span>
+                <div class="menu-detail">
+                  <p>Planned</p>
+                </div>
+              </li>
+              <li class="side-menu-option-container" onclick="task(this)">
+                <span class="material-symbols-rounded"> person </span>
+                <div class="menu-detail">
+                  <p>Assigned to me</p>
+                </div>
+              </li>
+              <li class="side-menu-option-container" onclick="task(this)">
+                <span class="material-symbols-rounded"> home </span>
+                <div class="menu-detail">
+                  <p>Tasks</p>
+                </div>
+              </li>
               <hr />
-            <li class="task-adder">
-              <span id="add" class="material-symbols-rounded"> add </span>
-              <div>
-                <input
-                  id="task-input"
-                  type="text"
-                  placeholder="New list"
-                  onmousedown="addTask()"
-                />
-              </div>
-              <span class="material-symbols-rounded"> group_add </span>
-            </li>
-          </div>
+              <li class="task-adder">
+                <span id="add" class="material-symbols-rounded"> add </span>
+                <div>
+                  <input
+                    id="task-input"
+                    type="text"
+                    placeholder="New list"
+                    onmousedown="addTask()"
+                  />
+                </div>
+                <span class="material-symbols-rounded"> group_add </span>
+              </li>
+            </div>
           </ol>
           <div class="bottom-logo-container">
             <div class="logo-container">
@@ -114,12 +114,12 @@
         </div>
         <div class="main-container">
           <div class="top-header-container">
-            <div id="menu" class="top-tool-bar-container">
-              <div class="day-logo">
+            <div class="top-tool-bar-container">
+              <div id="menu" class="day-logo">
                 <span class="material-symbols-rounded"> wb_sunny </span>
-              </div>
-              <div class="my-day">
-                <p>My Day</p>
+                <div class="my-day">
+                  <p>My Day</p>
+                </div>
               </div>
               <div class="more-logo">
                 <span class="material-symbols-rounded"> more_horiz </span>
@@ -136,7 +136,11 @@
                 <input type="text" placeholder="Add a task" />
               </div>
             </div>
-            <div class="add-task-creation-container"></div>
+            <div class="add-task-creation-container">
+              <span class="material-symbols-rounded"> calendar_month </span>
+              <span class="material-symbols-rounded"> notifications </span>
+              <span class="material-symbols-rounded"> repeat </span>
+            </div>
           </div>
         </div>
       </div>
