--- a/ToDo.html
+++ b/ToDo.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="bottom-container">
-        <div class="side-container">
+        <div id="show-menu" class="side-container">
           <div class="side-header-container">
             <span class="material-symbols-rounded" onclick="hideSideMenu()">
               menu
@@ -122,7 +122,7 @@
               <span class="material-symbols-rounded"> notifications </span>
               <span class="material-symbols-rounded"> repeat </span>
               <div class="add-button-container">
-                <button onclick="addTaskInHtml()">Add</button>
+                <button onclick="addTask()">Add</button>
               </div>
             </div>
             <div id="tasks"></div>
