right side rendering finished

--- a/ToDo.html
+++ b/ToDo.html
@@ -113,7 +113,7 @@
                 <button id="add-button">Add</button>
               </div>
             </div>
-            <div id="tasks"></div>
+            <div class="tasks" id="tasks"></div>
           </div>
         </div>
         <div id="hide-right-menu" class="right-side-container">
@@ -122,7 +122,11 @@
             <div class="steps">
               <span class="material-symbols-rounded"> add </span>
               <div class="task-step-input">
-                <input id="task-steps-input" type="text" placeholder="Add steps" />
+                <input
+                  id="task-steps-input"
+                  type="text"
+                  placeholder="Add steps"
+                />
               </div>
             </div>
             <div class="section">
@@ -170,6 +174,14 @@
                 <input id="task-notes" type="text" placeholder="Add note" />
               </div>
             </div>
+          </div>
+          <hr />
+          <div class="bottom-section">
+            <span id="right-side-hider" class="material-symbols-rounded">
+              hide
+            </span>
+            <span id="created-date"></span>
+            <span class="material-symbols-rounded"> delete </span>
           </div>
         </div>
       </div>
